[gd_scene load_steps=56 format=3 uid="uid://ciotvvhl257rt"]

[ext_resource type="Script" path="res://Combat/Soldier.gd" id="1_ceqk6"]
[ext_resource type="Texture2D" uid="uid://cew1otm5jcmnb" path="res://Assets/Character/Rifle/Shot_1.png" id="2_u88kh"]
[ext_resource type="Texture2D" uid="uid://dvdb1bxmryao1" path="res://Assets/Character/Rifle/Shot_2.png" id="3_ja3wa"]
[ext_resource type="Texture2D" uid="uid://bomhwwagv03qr" path="res://Assets/Character/Rifle/Dead.png" id="4_16ipy"]
[ext_resource type="Texture2D" uid="uid://bn32yen5bcuyv" path="res://Assets/Character/Rifle/Hurt.png" id="5_aptn7"]
[ext_resource type="Texture2D" uid="uid://depufm72dmkwk" path="res://Assets/Character/Rifle/Idle.png" id="6_b1g52"]
[ext_resource type="Texture2D" uid="uid://1igmb47cd2xw" path="res://Assets/Character/Rifle/Run.png" id="7_mgt6g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8eyop"]
size = Vector2(20, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ygxcn"]
size = Vector2(2067.69, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c8emr"]
size = Vector2(689.231, 32)

[sub_resource type="Animation" id="Animation_q4pbe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:create_bullet")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_k8g1v"]
resource_name = "attack1"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 0, 0, 0, 0, 0, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("AnimationPlayer:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:create_bullet")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_i1kmo"]
resource_name = "attack2"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack2"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 0, 0, 0, 0, 0, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:create_bullet")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("AnimationPlayer:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.0]
}

[sub_resource type="Animation" id="Animation_mp074"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_c7wpk"]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hit"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_uewn3"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.5, 0.5]
}

[sub_resource type="Animation" id="Animation_7hytm"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n6ytd"]
_data = {
"RESET": SubResource("Animation_q4pbe"),
"attack1": SubResource("Animation_k8g1v"),
"attack2": SubResource("Animation_i1kmo"),
"death": SubResource("Animation_mp074"),
"hit": SubResource("Animation_c7wpk"),
"idle": SubResource("Animation_uewn3"),
"run": SubResource("Animation_7hytm")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ffmk7"]
atlas = ExtResource("2_u88kh")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uml63"]
atlas = ExtResource("2_u88kh")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ainos"]
atlas = ExtResource("2_u88kh")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yll6y"]
atlas = ExtResource("2_u88kh")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7cgc"]
atlas = ExtResource("3_ja3wa")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e620g"]
atlas = ExtResource("3_ja3wa")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcool"]
atlas = ExtResource("3_ja3wa")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_86npd"]
atlas = ExtResource("3_ja3wa")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncyhi"]
atlas = ExtResource("4_16ipy")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1ixe"]
atlas = ExtResource("4_16ipy")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tl7y"]
atlas = ExtResource("4_16ipy")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhs55"]
atlas = ExtResource("4_16ipy")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc402"]
atlas = ExtResource("4_16ipy")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmti1"]
atlas = ExtResource("5_aptn7")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojp3g"]
atlas = ExtResource("5_aptn7")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0sen"]
atlas = ExtResource("5_aptn7")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsjn4"]
atlas = ExtResource("6_b1g52")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dsgf"]
atlas = ExtResource("6_b1g52")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3l1vl"]
atlas = ExtResource("6_b1g52")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjbfl"]
atlas = ExtResource("6_b1g52")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3p1t"]
atlas = ExtResource("6_b1g52")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lqhg"]
atlas = ExtResource("6_b1g52")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmcno"]
atlas = ExtResource("6_b1g52")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_awvqd"]
atlas = ExtResource("6_b1g52")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vs7ao"]
atlas = ExtResource("7_mgt6g")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fgkh"]
atlas = ExtResource("7_mgt6g")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoqsu"]
atlas = ExtResource("7_mgt6g")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0s2u"]
atlas = ExtResource("7_mgt6g")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yd6rc"]
atlas = ExtResource("7_mgt6g")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqtn8"]
atlas = ExtResource("7_mgt6g")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrsnc"]
atlas = ExtResource("7_mgt6g")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyqp0"]
atlas = ExtResource("7_mgt6g")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_0rtw4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffmk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uml63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ainos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yll6y")
}],
"loop": false,
"name": &"attack1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7cgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e620g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcool")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86npd")
}],
"loop": false,
"name": &"attack2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncyhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1ixe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tl7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhs55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc402")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmti1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojp3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0sen")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsjn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dsgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3l1vl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjbfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3p1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lqhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmcno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awvqd")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vs7ao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fgkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoqsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0s2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd6rc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqtn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrsnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyqp0")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_imybp"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ab528"]
bg_color = Color(0, 0, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ymy43"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ihu2a"]
size = Vector2(332.846, 12.3077)

[node name="Soldier" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 0
script = ExtResource("1_ceqk6")
facing_left_position = Vector2(-181, 0)
facing_right_position = Vector2(181, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8eyop")

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("RectangleShape2D_ygxcn")

[node name="AttackDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetectionArea"]
shape = SubResource("RectangleShape2D_c8emr")

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n6ytd")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_0rtw4")
animation = &"attack1"
autoplay = "idle"
frame = 1

[node name="FriendHealthbar" type="ProgressBar" parent="."]
offset_left = -16.0
offset_top = 32.0
offset_right = 197.0
offset_bottom = 52.0
scale = Vector2(0.15, 0.15)
theme_override_styles/background = SubResource("StyleBoxFlat_imybp")
theme_override_styles/fill = SubResource("StyleBoxFlat_ab528")
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="EnemyHealthbar" type="ProgressBar" parent="."]
offset_left = -15.5
offset_top = 32.0
offset_right = 197.5
offset_bottom = 52.0
scale = Vector2(0.15, 0.15)
theme_override_styles/background = SubResource("StyleBoxFlat_imybp")
theme_override_styles/fill = SubResource("StyleBoxFlat_ymy43")
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(184, 0)
shape = SubResource("RectangleShape2D_ihu2a")
disabled = true

[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="body_entered" from="AttackDetectionArea" to="." method="_on_attack_detection_area_body_entered"]
[connection signal="body_exited" from="AttackDetectionArea" to="." method="_on_attack_detection_area_body_exited"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_soldier_animation_finished"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
